# sfo-file-organizer

./: .gitignore  BUILD_EXE.bat  Compressed  Create Desktop Shortcuts.bat  Open Dashboard.bat  PACKAGE_RELEASE.bat  QUICK START.md  README.md  RELEASE_NOTES.md  SETUP - Run This First.bat  SFO File Organizer.spec  Smart File Organizer.spec  Start File Organizer.bat  ai_classifier.py  config.py  custom_rules.json  dashboard.py  file_version_info.txt  gui.py  history.py  logging_config.py  organizer.py  organizer_history.json  pyproject.toml  requirements.txt  rules.py  rules_ui.py  run_organizer.bat  setup.iss
.github/workflows/: build-release.yml  publish-pypi.yml
tests/: __init__.py
