[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-file-organizer"
version = "1.0.0"
description = "A Python utility that automatically organizes files into categorized folders based on file types, with rule-based classification and real-time monitoring."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "pjames-tech"}
]
keywords = ["file-organizer", "automation", "file-management", "desktop-app"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

dependencies = [
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/pjames-tech/smart-file-organizer"
Repository = "https://github.com/pjames-tech/smart-file-organizer"
Issues = "https://github.com/pjames-tech/smart-file-organizer/issues"

[project.scripts]
smart-file-organizer = "gui:main"
sfo = "gui:main"
sfo-cli = "organizer:main"

[project.gui-scripts]
smart-file-organizer-gui = "gui:main"

[tool.setuptools]
py-modules = ["gui", "organizer", "app_config", "history", "rules", "scheduler", "logging_config"]

[tool.setuptools.package-data]
"*" = ["custom_rules.json", "app_icon.ico", "app_icon.png"]
